Fix layout issue on wechat for autocomplete function

--- a/sites/all/themes/vacation/css/style.css
+++ b/sites/all/themes/vacation/css/style.css
@@ -330,7 +330,6 @@ fieldset {
 
 .popup,
 .cc-popup {
-  position: fixed;
   left: 0;
   top: 0;
   background: #fff;
